--- a/cmh/terminal/Cheekibreeki.CMH.Seguro.DAL/CMHModel.Context.tt
+++ b/cmh/terminal/Cheekibreeki.CMH.Seguro.DAL/CMHModel.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"SeguroModel.edmx";
+const string inputFile = @"CMHModel.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
